--- a/src/app/home/HomePage.module.css
+++ b/src/app/home/HomePage.module.css
@@ -7,6 +7,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+
+.logout {
+  border: 1px solid var(--secundary-color);
+  border-radius: 8px;
+  color: var(--primary-color);
+  padding: 5px 10px;
+  cursor: pointer;
+
 }
 
 .background button {
